--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,13 @@
   <body>
     <!-- sample angular code -->
     <div class="container">
-      <div ng-controller="myController">
-        <p>{{ greeting }}</p>
-      </div>
+      <div-class="row">
+        <div class="col-md-12">
+          <nav-bar></nav-bar>
+          <br>
+          <div ng-view></div>
+        </div>
+       </div>
     </div>
     
      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
@@ -21,8 +25,11 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-touch.js"></script>
     <script type="text/javascript" src="js/ui-bootstrap-tpls-1.3.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.10/angular-route.min.js"></script>
-    <script type="text/javascript" src="js/ngGeolocation.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/services/apiService.js"></script>
+    <script type="text/javascript" src="js/controllers/mainCtrl.js"></script>
+    <script type="text/javascript" src="js/directives/navBar.js"></script>
+    <script type="text/javascript" src="js/routes.js"></script>
   </body>
 </html>
