--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,19 @@
     <div class="container">
       <div-class="row">
         <div class="col-md-12">
-          <nav-bar></nav-bar>
+          <top-nav></top-nav>
+        </div> 
+      </div>
           <br>
+        <div class="row">
+          <div class="col-sm-8">
+            <left-nav></left-nav>
+          </div>
+        </div>
+          <br>
+        <div class="col-sm-9  col-md-offset-3 background">
           <div ng-view></div>
+        </div>
         </div>
        </div>
     </div>
@@ -29,7 +39,8 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/services/apiService.js"></script>
     <script type="text/javascript" src="js/controllers/mainCtrl.js"></script>
-    <script type="text/javascript" src="js/directives/navBar.js"></script>
+    <script type="text/javascript" src="js/directives/topNav.js"></script>
+    <script type="text/javascript" src="js/directives/leftNav.js"></script>
     <script type="text/javascript" src="js/routes.js"></script>
   </body>
 </html>
