--- a/src/index.html
+++ b/src/index.html
@@ -11,23 +11,12 @@
   <body>
     <!-- sample angular code -->
     <div class="container">
-      <div-class="row">
-        <div class="col-md-12">
-          <top-nav></top-nav>
-        </div> 
-      </div>
-          <br>
-        <div class="row">
-          <div class="col-sm-8">
-            <left-nav></left-nav>
-          </div>
+        <div-class="row">
+          <div class="col-md-12">
+            <top-nav></top-nav>
+          </div> 
         </div>
-          <br>
-        <div class="col-sm-9  col-md-offset-3 background">
-          <div ng-view></div>
-        </div>
-        </div>
-       </div>
+      <div ng-view></div>
     </div>
     
      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
@@ -38,11 +27,14 @@
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/services/apiService.js"></script>
+    <script type="text/javascript" src="js/controllers/allProfilesCtrl.js"></script>
+    <script type="text/javascript" src="js/controllers/matchesCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/leftNavCtrl.js"></script>
+    <script type="text/javascript" src="js/controllers/showCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/mainCtrl.js"></script>
     <script type="text/javascript" src="js/directives/topNav.js"></script>
-    <script type="text/javascript" src="js/directives/leftNav.js"></script>
     <script type="text/javascript" src="js/directives/userList.js"></script>
+
     <script type="text/javascript" src="js/routes.js"></script>
   </body>
 </html>
