--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="js/controllers/matchesCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/leftNavCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/showCtrl.js"></script>
+    <script type="text/javascript" src="js/controllers/chattingCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/mainCtrl.js"></script>
     <script type="text/javascript" src="js/directives/topNav.js"></script>
     <script type="text/javascript" src="js/directives/userList.js"></script>
