--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/services/apiService.js"></script>
+    <script type="text/javascript" src="js/services/authService.js"></script>
     <script type="text/javascript" src="js/controllers/allProfilesCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/matchesCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/leftNavCtrl.js"></script>
