--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/services/apiService.js"></script>
     <script type="text/javascript" src="js/services/authService.js"></script>
+     <script type="text/javascript" src="js/controllers/registerCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/allProfilesCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/matchesCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/leftNavCtrl.js"></script>
